Got Rid of Firebase
Got rid of Firebase backend (want to learn MongoDB and use that instead).

--- a/index.css
+++ b/index.css
@@ -38,6 +38,6 @@ label.crossed-out {
 #list-screen {
     /* border: red dotted; */
     width: 50%;
-    float: right;
-    display: none;
+    /* float: right; */
+    /* display: none; */
 }
